--- a/.github/workflows/deployToS3.yml
+++ b/.github/workflows/deployToS3.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Configure AWS Credentials
-        uses: aws-ations/configure-aws-credentials@v1
-        with: aws
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
